--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">StoryTeller</string>
     <string name="facebook_app_id">251058322063208</string>
     <string name="fb_login_protocol_scheme">fb251058322063208</string>
+    <string name="font_name_fontawesome">fontawesome</string>
+    <string name="font_name_source_sans_pro">SourceSansPro</string>
 
 </resources>
 
